# homeo-telehealth

./: .env.example  .replit  Favorites - Shortcut.lnk  fastapi-issue-tracker - Shortcut.lnk  frontend - Shortcut.lnk  package-lock.json  package.json  patch.py  propay-ui - Shortcut.lnk  pyproject.toml  redis-queue-demo - Shortcut.lnk  replit.md  run_dev.py  satvat - Shortcut.lnk
attached_assets/: Pasted-Project-Homeopathic-Telemedicine-Web-Application-OTP-Ba_1770146293978.txt
backend/: database.py  main.py  models.py  reset_db.py  schemas.py
client/src/: App.tsx  index.css
client/src/components/: theme-toggle.tsx
client/src/lib/: auth-context.tsx
client/src/pages/: DocterDashboard.tsx  DocterLogin.tsx  dashboard.tsx  login.tsx  register.tsx
server/: db.ts  index.ts  routes.ts  seed.ts  storage.ts
shared/: schema.ts
